<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:icon="@drawable/ic_round_more_vert_24"
        android:iconTint="@color/colorOnPrimary"
        android:title="@string/more"
        app:iconTint="@color/colorOnPrimary"
        app:showAsAction="always"
        tools:ignore="UnusedAttribute">
        <menu>
            <item android:title="@string/sort_mode">
                <menu>
                    <group android:checkableBehavior="single">
                        <item
                            android:id="@+id/name"
                            android:checkable="true"
                            android:title="@string/sort_by_name" />
                        <item
                            android:id="@+id/name_desc"
                            android:checkable="true"
                            android:title="@string/sort_by_name_desc" />
                    </group>
                    <group android:checkableBehavior="single">
                        <item
                            android:id="@+id/date"
                            android:checkable="true"
                            android:title="@string/sort_by_date" />
                        <item
                            android:id="@+id/date_desc"
                            android:checkable="true"
                            android:title="@string/sort_by_date_desc" />
                    </group>
                    <group android:checkableBehavior="single">
                        <item
                            android:id="@+id/size"
                            android:checkable="true"
                            android:title="@string/sort_by_size" />
                        <item
                            android:id="@+id/size_desc"
                            android:checkable="true"
                            android:title="@string/sort_by_size_desc" />
                    </group>
                    <item android:title="@string/cancel" />
                </menu>
            </item>
            <group android:checkableBehavior="none">
                <item
                    android:id="@+id/folder"
                    android:checkable="false"
                    android:title="@string/create_new_folder" />
            </group>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/show_hidden"
                    android:checkable="true"
                    android:title="@string/show_hidden_files" />
            </group>
            <item android:title="@string/cancel" />
        </menu>
    </item>
</menu>