<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_round_search_24"
        android:iconTint="@color/colorOnPrimary"
        android:title="@string/search"
        app:iconTint="@color/colorOnPrimary"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction,UnusedAttribute" />
    <item
        android:id="@+id/refresh"
        android:icon="@drawable/ic_round_refresh_24"
        android:iconTint="@color/colorOnPrimary"
        android:title="@string/refresh_list"
        app:iconTint="@color/colorOnPrimary"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction,UnusedAttribute" />
    <item
        android:id="@+id/sort"
        android:icon="@drawable/ic_round_sort_24"
        android:iconTint="@color/colorOnPrimary"
        android:title="@string/sort"
        app:iconTint="@color/colorOnPrimary"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction,UnusedAttribute">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/name"
                    android:checkable="true"
                    android:title="@string/sort_by_name" />
                <item
                    android:id="@+id/name_desc"
                    android:checkable="true"
                    android:title="@string/sort_by_name_desc" />
                <item
                    android:id="@+id/date"
                    android:checkable="true"
                    android:title="@string/sort_by_date" />
                <item
                    android:id="@+id/date_desc"
                    android:checkable="true"
                    android:title="@string/sort_by_date_desc" />
                <item
                    android:id="@+id/size"
                    android:checkable="true"
                    android:title="@string/sort_by_size" />
                <item
                    android:id="@+id/size_desc"
                    android:checkable="true"
                    android:title="@string/sort_by_size_desc" />
            </group>
            <item android:title="@string/cancel" />
        </menu>
    </item>

    <item
        android:id="@+id/more"
        android:icon="@drawable/ic_round_more_vert_24"
        android:iconTint="@color/colorOnPrimary"
        android:title="@string/more"
        app:iconTint="@color/colorOnPrimary"
        app:showAsAction="always"
        tools:ignore="UnusedAttribute">
        <menu>
            <item
                android:id="@+id/folder"
                android:title="@string/create_new_folder" />
            <item
                android:id="@+id/upload"
                android:title="@string/upload_files_to_current_dir" />
            <item
                android:id="@+id/cancel"
                android:title="@string/cancel" />
        </menu>
    </item>
</menu>