<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/start_all"
        android:icon="@drawable/ic_round_play_arrow_24"
        android:iconTint="@color/colorOnPrimary"
        android:title="@string/start_all_tasks"
        android:visible="false"
        app:iconTint="@color/colorOnPrimary"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction,UnusedAttribute" />
    <item
        android:id="@+id/pause_all"
        android:icon="@drawable/ic_round_pause_24"
        android:iconTint="@color/colorOnPrimary"
        android:title="@string/pause_all_tasks"
        android:visible="false"
        app:iconTint="@color/colorOnPrimary"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction,UnusedAttribute" />

    <item
        android:id="@+id/more"
        android:icon="@drawable/ic_round_more_vert_24"
        android:iconTint="@color/colorOnPrimary"
        android:title="@string/more"
        app:iconTint="@color/colorOnPrimary"
        app:showAsAction="always"
        tools:ignore="UnusedAttribute">
        <menu>
            <item
                android:id="@+id/clear_all_downloads"
                android:title="@string/clear_all_downloads" />

            <item
                android:id="@+id/clear_all_done_tasks"
                android:title="@string/clear_all_done_tasks" />

            <item
                android:id="@+id/cancel"
                android:title="@string/cancel" />
        </menu>
    </item>
</menu>