<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AlwaysShowAction">
    <item
        android:id="@+id/select"
        android:icon="@drawable/ic_round_format_list_numbered_24"
        android:iconTint="@color/colorOnPrimary"
        android:title="@string/select_episode"
        android:visible="false"
        app:iconTint="@color/colorOnPrimary"
        app:showAsAction="always"
        tools:targetApi="o"
        tools:visible="true" />
    <item
        android:id="@+id/play"
        android:icon="@drawable/ic_round_play_arrow_24"
        android:iconTint="@color/colorOnPrimary"
        android:title="@string/play"
        android:visible="false"
        app:iconTint="@color/colorOnPrimary"
        app:showAsAction="always"
        tools:targetApi="o"
        tools:visible="true" />
    <item
        android:id="@+id/stop"
        android:icon="@drawable/ic_round_stop_24"
        android:iconTint="@color/colorOnPrimary"
        android:title="@string/stop"
        android:visible="false"
        app:iconTint="@color/colorOnPrimary"
        app:showAsAction="always"
        tools:targetApi="o"
        tools:visible="true" />
</menu>