<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@drawable/shape_sheet_dialog"
        android:elevation="5dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/handler"
            android:layout_width="40dp"
            android:layout_height="4dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:src="@drawable/selector_sheet_handler" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <android.widget.Space
                android:layout_width="0dp"
                android:layout_height="8dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:text="@string/file_name"
                android:textColor="@color/colorOnSurfaceMedium"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:textColor="@color/colorOnSurface"
                android:textSize="14sp"
                tools:text="Men.In.Black.II.黑衣人2.2002.中英字幕.BDrip.720P-人人影视.mp4" />

            <android.widget.Space
                android:layout_width="0dp"
                android:layout_height="8dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="18dp"
                android:text="@string/file_path"
                android:textColor="@color/colorOnSurfaceMedium"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvURL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:textColor="@color/colorOnSurface"
                android:textSize="14sp"
                tools:text="magnet:?xt=urn:btih:15A2ABD00B10E46EADFF0665F39809094E3CC40A" />

            <android.widget.Space
                android:layout_width="0dp"
                android:layout_height="8dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="18dp"
                android:text="@string/file_date"
                android:textColor="@color/colorOnSurfaceMedium"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:textColor="@color/colorOnSurface"
                android:textSize="14sp"
                tools:text="2022-03-10 01:45" />

            <android.widget.Space
                android:layout_width="0dp"
                android:layout_height="8dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="18dp"
                android:text="@string/file_size"
                android:textColor="@color/colorOnSurfaceMedium"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:textColor="@color/colorOnSurface"
                android:textSize="14sp"
                tools:text="945.8 MB" />

            <android.widget.Space
                android:layout_width="0dp"
                android:layout_height="16dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_cancel"
                style="@style/MaterialButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:text="@string/confirm" />

            <android.widget.Space
                android:layout_width="0dp"
                android:layout_height="20dp" />
        </LinearLayout>

    </LinearLayout>
</layout>
